--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
         "php": ">=7.4.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "doctrine/annotations": "^1.11",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.8",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
@@ -21,7 +25,7 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.23"
+        "symfony/maker-bundle": "^1.33"
     },
     "config": {
         "optimize-autoloader": true,
