--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
         "symfony/http-kernel": "5.1.*",
+        "symfony/phpunit-bridge": "^6.3",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/serializer": "5.1.*",
@@ -25,6 +26,7 @@
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9",
         "symfony/maker-bundle": "^1.33"
     },
     "config": {
